--- a/packages/@aws-cdk/aws-ecs/package.json
+++ b/packages/@aws-cdk/aws-ecs/package.json
@@ -79,6 +79,7 @@
     "@aws-cdk/aws-logs": "^0.24.1",
     "@aws-cdk/aws-route53": "^0.24.1",
     "@aws-cdk/aws-sns": "^0.24.1",
+    "@aws-cdk/aws-secretsmanager": "^0.24.1",
     "@aws-cdk/cdk": "^0.24.1",
     "@aws-cdk/cx-api": "^0.24.1"
   },
@@ -97,6 +98,7 @@
     "@aws-cdk/aws-iam": "^0.24.1",
     "@aws-cdk/aws-logs": "^0.24.1",
     "@aws-cdk/aws-route53": "^0.24.1",
+    "@aws-cdk/aws-secretsmanager": "^0.24.1",
     "@aws-cdk/cdk": "^0.24.1"
   },
   "engines": {
